script to determine weekends

--- a/mta_hourly_ridership_analysis.ipynb
+++ b/mta_hourly_ridership_analysis.ipynb
@@ -234,7 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# array for station iformation\n",
+    "# DataFrame for station iformation\n",
     "station_info_df = df[[\"station_complex\", \"borough\", \"latitude\", \"longitude\", \"Georeference\"]].drop_duplicates()"
    ]
   },
